--- a/src/assets/css/global.scss
+++ b/src/assets/css/global.scss
@@ -15,17 +15,32 @@ html, body, #app {
         justify-content: center;
     }
 
-    button {
-        background-color: $btn-orange;
-        border: 1px solid $btn-orange;
-        color: #fff;
+    .btn {
         padding: 10px 20px;
         cursor: pointer;
         border-radius: 3px;
-    
+        outline: none;
+    }
+
+    .btn-orange {
+        background-color: $btn-orange;
+        border: 1px solid $btn-orange;
+        color: #fff;
+
         &:hover {
             color: $btn-orange;
             background-color: #fff;
         }
     }
+
+    .btn-gray {
+        background-color: $gray-color;
+        border: 1px solid $gray-color;
+        color: #000;
+
+        &:hover {
+            background-color: darken($gray-color, 10%);
+        }
+    }
+
 }
