--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -1,5 +1,5 @@
 @import './variables.scss';
 @import './global.scss';
 @import './listing.scss';
-@import './cart.scss';
+@import './basket.scss';
 @import './modal.scss';
